# sportpools-tennis

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: __main__.py
src/sportpools/: __main__.py  emulator.py  tennis.py
src/sportpools/model/: emulator.py  tennis.py
tests/: test_tennis_pool.py
