[project]
name = "sportpools-tennis"
version = "0.1.5"
description = "Optimizer for selecting tennis players in Sportpools."
authors = [{ name = "Bart Hazen", email = "hazenbart@gmail.com" }]
license = { text = "GNU General Public License v3.0" }
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "bs4>=0.0.2",
    "coloredlogs>=15.0.1",
    "html5lib>=1.1",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pulp>=2.9.0",
]

[project.scripts]
sportpools = "sportpools.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sportpools"]
